--- a/ClientApp/src/index.scss
+++ b/ClientApp/src/index.scss
@@ -10,3 +10,43 @@ body {
   margin: 0;
   min-height: 100%;
 }
+
+header {
+  display: flex;
+  justify-content: center;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+}
+
+.restaurant-list {
+  list-style-type: none;
+  padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+}
+
+.restaurant-list-h2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.restaurant-list-h3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.restaurants-add {
+  display: flex;
+  justify-content: center;
+}
